--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,15 +15,20 @@
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
           {% if site.github_username %}
-          <li>
             {% include icon-github.html username=site.github_username %}
-          </li>
           {% endif %}
 
           {% if site.twitter_username %}
-          <li>
             {% include icon-twitter.html username=site.twitter_username %}
-          </li>
+          {% endif %}
+          {% if site.linkedin_username %}
+            {% include icon-linkedin.html username=site.linkedin_username %}
+          {% endif %}
+          {% if site.instagram_username %}
+            {% include icon-instagram.html username=site.instagram_username %}
+          {% endif %}
+          {% if site.facebook_username %}
+            {% include icon-facebook.html username=site.facebook_username %}
           {% endif %}
         </ul>
       </div>
